[package]
name = "interfaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = { version = "^0.3.0" }

[lib]
name = "straprs"
path = "src/lib.rs"

[[bin]]
name = "interfaces"
path = "src/main.rs"